--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,28 +1,12 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you: 
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+# Er wordt gebruik gemaakt van Jekyll & Just The Docs
+remote_theme: pmarsceill/just-the-docs
 
 title: FabLab Erpe-Mere Jeugdwerking
 color_scheme: dark
 search_enabled: true
-footer_content: "Jeugdwerking FabLab Erpe-Mere - 2021"
+footer_content: "Jeugdwerking FabLab Erpe-Mere - 2022"
 
+# Aux links for the upper right navigation
 aux_links:
   "View the organisation on GitHub":
     - https://github.com/Jeugdwerking-FLEM
