--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,6 @@
 # Er wordt gebruik gemaakt van Jekyll & Just The Docs
-remote_theme: pmarsceill/just-the-docs
+#remote_theme: pmarsceill/just-the-docs #old
+remote_theme: just-the-docs/just-the-docs
 
 title: FabLab Erpe-Mere Jeugdwerking
 color_scheme: dark
